cluster_init/cluster-extensions/argocd-local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - argocd--smart-scrum-poker.localhost.balazskrizsan.com
      secretName: cert-localhost.balazskrizsan.com
  rules:
    - host: argocd--smart-scrum-poker.localhost.balazskrizsan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
