cluster_init/cluster-extensions/minikube-dashboard-local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - minikube-dashboard--smart-scrum-poker.localhost.balazskrizsan.com
      secretName: cert-localhost.balazskrizsan.com
  rules:
    - host: minikube-dashboard--smart-scrum-poker.localhost.balazskrizsan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
